@@ -1,3 +1,8 @@
+* FIXED: Dialer: initialize variable to NULL in case the regexp does not match
+  on msg_Dial. Also relax the regexp a bit. Attempt to fix Elastix bug #1682.
+* FIXED: Incoming Campaigns: fix missing SQL parameter to UNION query for 
+  campaign forms. Fixes Elastix bug #1641.
+
 2.2.0-2 (SVN revision 5135)
 * Campaign Monitoring: fix design flaw that requested very large datasets 
   because of log entries on busy servers. Now log entries are not requested on
